update controllers, add profile.css file

--- a/src/views/partials/head.hbs
+++ b/src/views/partials/head.hbs
@@ -1,8 +1,5 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD
-<link rel="stylesheet" href="public/css/{{css}}.css">
-=======
->>>>>>> 9bf8e2100c69bf48d0a38c7565d5c7766c2e904f
+<link rel="stylesheet" href="css/{{css}}.css">
 <title>Post</title>
