--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,13 +1,9 @@
-<<<<<<< HEAD
 <form action="/add-post" method="post" class="sendPost-form">
-    <textarea name="post-area" class="post-area" cols="50" rows="20" placeholder="Enter your thoughts"></textarea>
+    <textarea name="post-area" class="post-area" cols="55" rows="5" placeholder="Enter your thoughts" class="post-area"></textarea>
     <input type="submit" value="Post">
 </form>
 <div class="posts-div">
     {{#each posts}}
-    <div class="post">{{this}}</div>
+    <div class="post">{{this.post}}</div>
     {{/each}}
 </div>
-=======
-<h1>welcome</h1>
->>>>>>> 9bf8e2100c69bf48d0a38c7565d5c7766c2e904f
