--- a/src/views/signin.hbs
+++ b/src/views/signin.hbs
@@ -1,6 +1,6 @@
-<section>
+<section >
     <form action="/signin" method="post" novalidate>
-    <label for="email"> Enter email:
+    <label class="ff" for="email"> Enter email:
         <input type="email" name="email" id="email" required>
     </label><br>
     <label for="password"> Enter password:
