update src controllers

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -15,7 +15,7 @@
     <footer>
         {{> footer}}
     </footer>
-    <script src="public/js/{{js}}.js"></script>
+    <script src="js/{{js}}.js"></script>
 </body>
 
 </html>
