--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,3 +1,4 @@
+<input type="button" value="Logout" class="logout-btn">
 <form action="/add-post" method="post" class="sendPost-form">
     <textarea name="post-area" class="post-area" cols="55" rows="5" placeholder="Enter your thoughts" class="post-area"></textarea>
     <input type="submit" value="Post">
