--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -1,40 +1,60 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.form-style{
-    color: #00000;
-    width: 50%;
-    margin: 0 auto;
-    background-color:#efa1a1;
-    border-radius: 10px;
+.nav {
+  display: flex;
+  background: #efa1a1;
+  height: 30px;
+  justify-content: space-between;
 }
-.label{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 10px;
+.logo {
+  margin: 0 auto;
 }
-.submit-btn{
-    margin-top: 10px;
-    width:20%;
-    color: #eeeee;
-    margin-bottom: 20px;
-    background-color: #c5c5c5;
-    
+.sign-btn,
+.submit-btn {
+  background: skyblue;
+  border: 1px solid skyblue;
+  border-radius: 5px;
+  cursor: pointer;
+  height: 25px;
+  width: 100px;
+  margin: auto 0;
+  margin-right: 10px;
 }
-#email, #password {
-    width: 60%; 
-    outline-color: blueviolet;
+.footer {
+  position: absolute;
+  bottom: 0;
+  background: #efa1a1;
+  height: 30px;
+  width: 100%;
+  text-align: center;
 }
-.container{
-    padding: 40px;
-    margin-top: 20px;
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.form-style {
+  color: #000;
+  width: 50%;
+  margin: 9% auto;
+  background-color: #efa1a1;
+  border-radius: 10px;
+}
+.label {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 10px;
+}
+#email,
+#password {
+  width: 60%;
+  outline-color: blueviolet;
+}
+.container {
+  padding: 40px;
+  margin-top: 20px;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
